Added time and date selector in HTML

--- a/index.html
+++ b/index.html
@@ -98,22 +98,21 @@
 
     <section class="BookAppointment">
       <h2>Book Appointment</h2>
-      <form>
+        <div>
         <label for="name">Full Name:</label>
         <input type="text" id="name" name="Full Name" required>
-
+        </div>
+        <div>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-
+        </div>
+        <div>   
          <div class="multiselect">
-    <div class="selectBox" onclick="showCheckboxes()">
-      <select>
-        <option>Select your Services:
-            (You can select more than one)
-        </option>
-      </select>
-      <div class="overSelect"></div>
-    </div>
+         <div class="selectBox" onclick="showCheckboxes()">
+        Choose your preferred service(s):
+        </div>
+        </div>
+        </div>
     <div id="checkboxes">
       <label for="one">
         <input type="checkbox" id="one" name="Massage" value="option1">Massage
@@ -124,12 +123,21 @@
       <label for="three">
         <input type="checkbox" id="three" name="Aromatherapy" value="option3">Aromatherapy
       </label>
+    <div>
+        What day would you like to book your appointment?
+        <div>
+      <input type="date" id="date" name="date" required>
+      </div>
+        <div> Choose your preferred time:
+        </div>      
+        <div>
+        <input type="time" id="time" name="time" required>
+      </div>
     </div>
   </div>
 
 
         <button type="submit">Submit</button>
-      </form>
     </section>
 
 
