Added customization to main title and Nav Bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>The Zen Den</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=MonteCarlo&family=Sansita+Swashed:wght@300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  
 </head>
 <body>
 
@@ -20,7 +22,7 @@
 
 
     <section class="hero">
-        <img src="./images/background.jpg" width="800" alt="Spa Background Image">
+        
       <h2>Welcome to Relaxation</h2>
       <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
           Quia voluptates molestiae quo odio minus quae, quasi, 
