updated hero section and added more detail to spa menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           Quia voluptates molestiae quo odio minus quae, quasi, 
           quaerat veniam esse ipsa est animi aut nostrum quidem repellat? 
           At voluptas consequuntur nobis.</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Quia voluptates molestiae quo odio minus quae, quasi, 
+          quaerat veniam esse ipsa est animi aut nostrum quidem repellat? 
+          At voluptas consequuntur nobis.</p>
     </section>
 
     <section id="spa-menu" class="spa-menu">
@@ -36,28 +40,43 @@
           <h3>Facial Treatments</h3>
           <ul>
            <li>Brightening Facial - $80</li>
+           <p>Lorem ipsum dolor sit amet.</p>
             <li>Hydrating Facial - $80</li>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
             <li>Acne Treatment Facial - $80</li>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
             <li>Collagen Boost Facial - $80</li>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             <li>Anti-Aging Facial - $80</li>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, labore!</p>
           </ul>
             <img src="./images/massage.jpg" width="400" alt="Massage Therapies">
           <h3>Massage Therapies</h3>
           <ul>
            <li>Swedish Massage - $60</li>
+           <p>Lorem ipsum dolor sit amet consectetur.</p>
             <li>Deep Tissue Massage - $60</li>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <li>Hot Stone Therapy - $60</li>
+            <p>Lorem ipsum dolor sit amet.</p>
             <li>Aromatherapy Massage - $60</li>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
             <li>Reflexology - $60</li>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
           </ul>
             <img src="./images/aromatherapy.jpg" width="400" alt="Aromatherapy">
           <h3>Aromatherapy</h3>
           <ul>
             <li>Lavender Relaxation - $55</li>
+            <p>Lorem ipsum dolor sit amet.</p>
             <li>Citrus Energy Boost - $55</li>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <li>Rose Renewal - $55</li>
+            <p>Lorem ipsum dolor sit amet.</p>
             <li>Calming Chamomile - $55</li>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <li>Tea Tree Purify - $55</li>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
           </ul>
       
     </section>
