Added same layout to each section

--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
      <section id="wellness">
       <h2>The Wellness Nook</h2>
           <h3>The Secret to Radiant Skin</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-             Sequi, facere, quaerat eligendi laudantium excepturi nisi vitae laboriosam tempora, 
-             inventore modi qui ullam optio minima ex assumenda quisquam.
-             Iusto, reiciendis molestias.</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsum omnis accusamus delectus, tempora dolorem architecto pariatur distinctio adipisci culpa saepe inventore maxime suscipit doloribus eum qui libero doloremque reprehenderit!
+          Necessitatibus assumenda dolore eius laboriosam doloremque? Consequatur delectus aspernatur odit quisquam ratione consequuntur saepe tenetur. Similique hic quam ratione repudiandae eius architecto neque deleniti ab dolorem omnis, debitis ut ea?
+          Iure fugit dignissimos facilis autem odit quia suscipit reprehenderit ullam aut laudantium maiores temporibus alias quasi, voluptas impedit aliquam at facere atque quaerat officia. Placeat, aperiam error? Assumenda, corporis aliquam.
+          Recusandae, aspernatur. Tempore distinctio nam inventore est praesentium. Beatae eveniet sint alias, dolorem nulla laborum voluptate saepe ullam laudantium repellat obcaecati magni, optio atque possimus molestias ipsum eligendi cumque molestiae!
+          Quibusdam qui iste ullam vitae aut, voluptas nesciunt sunt alias dignissimos et velit animi suscipit amet illo molestias reiciendis similique voluptatum vero excepturi aliquid ad quasi dolorem ducimus! Magni, illum.</p>
           <h3>Wind Down Naturally</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-             Doloribus, voluptatum. Quisquam, cumque. 
-             Doloremque, voluptates. Quasi, cumque. 
-             Doloremque, voluptates. Quasi, cumque.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim itaque minima quaerat. Eligendi nihil corrupti recusandae alias. Fuga pariatur, asperiores, nam quod minus impedit veritatis ad similique nihil quo odio.
+          Et vero fuga perferendis! Aliquid nostrum modi eum reprehenderit praesentium quia ullam, officia recusandae molestiae commodi quidem quae quisquam nihil similique molestias adipisci soluta, delectus et nisi consequatur exercitationem incidunt.
+          Aperiam vitae rem nobis recusandae? Voluptatum, qui quo nihil asperiores unde quis voluptatibus repellat magnam libero velit possimus in ut ad dolorem optio animi quam quaerat quod ea saepe distinctio!
+          Ipsam repellendus doloremque mollitia, laborum id at excepturi sequi totam amet sed architecto nulla dolores corrupti temporibus quidem natus dolore tenetur deleniti commodi voluptas quaerat qui. Quae maiores itaque consectetur.</p>
         </section>
 
     <section id="testimonials">
