added bootstrap to wellness nook section

--- a/index.html
+++ b/index.html
@@ -46,69 +46,67 @@
           At voluptas consequuntur nobis.</p>
     </section>
 
-    <section id="spa-menu" class="spa-menu">
-      <h2>Our Spa Menu</h2>
-        <img src="./images/Facial.jpg" width="400" alt="Facial Treatments">
-          <h3>Facial Treatments</h3>
-          <ul>
-           <li>Brightening Facial - $80
-           Lorem ipsum dolor sit amet.</li>
-            <li>Hydrating Facial - $80
-         Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Acne Treatment Facial - $80
-            Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Collagen Boost Facial - $80
-           Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <li>Anti-Aging Facial - $80
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, labore!
-            </li>
-        </ul>
-            <img src="./images/massage.jpg" width="400" alt="Massage Therapies">
-          <h3>Massage Therapies</h3>
-          <ul>
-           <li>Swedish Massage - $60
-           Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Deep Tissue Massage - $60
-            Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            <li>Hot Stone Therapy - $60
-            Lorem ipsum dolor sit amet.</li>
-            <li>Aromatherapy Massage - $60
-            Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Reflexology - $60
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </li>
-          </ul>
-            <img src="./images/aromatherapy.jpg" width="400" alt="Aromatherapy">
-          <h3>Aromatherapy</h3>
-          <ul>
-            <li>Lavender Relaxation - $55
-            Lorem ipsum dolor sit amet.</li>
-            <li>Citrus Energy Boost - $55
-            Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            <li>Rose Renewal - $55
-            Lorem ipsum dolor sit amet.</li>
-            <li>Calming Chamomile - $55
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Tea Tree Purify - $55
-            Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
-          </ul>
-      
-    </section>
+    <section id="spa-menu" class="container my-5">
+  <h2 class="text-center mb-4">Our Spa Menu</h2>
+  <div class="row g-4">
+     <div class="col-md-4">
+      <img src="./images/Facial.jpg" class="img-fluid rounded mb-3" alt="Facial Treatments">
+      <h3>Facial Treatments</h3>
+      <ul class="list-unstyled">
+        <li><strong>Brightening Facial</strong> - $80</li>
+        <li><strong>Hydrating Facial</strong> - $80</li>
+        <li><strong>Acne Treatment Facial</strong> - $80</li>
+        <li><strong>Collagen Boost Facial</strong> - $80</li>
+        <li><strong>Anti-Aging Facial</strong> - $80</li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <img src="./images/aromatherapy.jpg" class="img-fluid rounded mb-3" alt="Aromatherapy">
+      <h3>Aromatherapy</h3>
+      <ul class="list-unstyled">
+        <li><strong>Lavender Relaxation</strong> - $55</li>
+        <li><strong>Citrus Energy Boost</strong> - $55</li>
+        <li><strong>Rose Renewal</strong> - $55</li>
+        <li><strong>Calming Chamomile</strong> - $55</li>
+        <li><strong>Tea Tree Purify</strong> - $55</li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <img src="./images/massage.jpg" class="img-fluid rounded mb-3" alt="Massage Therapies">
+      <h3>Massage Therapies</h3>
+      <ul class="list-unstyled">
+        <li><strong>Swedish Massage</strong> - $60</li>
+        <li><strong>Deep Tissue Massage</strong> - $60</li>
+        <li><strong>Hot Stone Therapy</strong> - $60</li>
+        <li><strong>Aromatherapy Massage</strong> - $60</li>
+        <li><strong>Reflexology</strong> - $60</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-     <section id="wellness">
-      <h2>The Wellness Nook</h2>
+
+
+     <section id="wellness" class="container my-5">
+          <h2 class="text-center mb-4">The Wellness Nook</h2>
+          <div class="row">
+      <div class="col-md-6">
           <h3>The Secret to Radiant Skin</h3>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsum omnis accusamus delectus, tempora dolorem architecto pariatur distinctio adipisci culpa saepe inventore maxime suscipit doloribus eum qui libero doloremque reprehenderit!
           Necessitatibus assumenda dolore eius laboriosam doloremque? Consequatur delectus aspernatur odit quisquam ratione consequuntur saepe tenetur. Similique hic quam ratione repudiandae eius architecto neque deleniti ab dolorem omnis, debitis ut ea?
           Iure fugit dignissimos facilis autem odit quia suscipit reprehenderit ullam aut laudantium maiores temporibus alias quasi, voluptas impedit aliquam at facere atque quaerat officia. Placeat, aperiam error? Assumenda, corporis aliquam.
           Recusandae, aspernatur. Tempore distinctio nam inventore est praesentium. Beatae eveniet sint alias, dolorem nulla laborum voluptate saepe ullam laudantium repellat obcaecati magni, optio atque possimus molestias ipsum eligendi cumque molestiae!
           Quibusdam qui iste ullam vitae aut, voluptas nesciunt sunt alias dignissimos et velit animi suscipit amet illo molestias reiciendis similique voluptatum vero excepturi aliquid ad quasi dolorem ducimus! Magni, illum.</p>
+          </div>
+      <div class="col-md-6">  
           <h3>Wind Down Naturally</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim itaque minima quaerat. Eligendi nihil corrupti recusandae alias. Fuga pariatur, asperiores, nam quod minus impedit veritatis ad similique nihil quo odio.
           Et vero fuga perferendis! Aliquid nostrum modi eum reprehenderit praesentium quia ullam, officia recusandae molestiae commodi quidem quae quisquam nihil similique molestias adipisci soluta, delectus et nisi consequatur exercitationem incidunt.
           Aperiam vitae rem nobis recusandae? Voluptatum, qui quo nihil asperiores unde quis voluptatibus repellat magnam libero velit possimus in ut ad dolorem optio animi quam quaerat quod ea saepe distinctio!
           Ipsam repellendus doloremque mollitia, laborum id at excepturi sequi totam amet sed architecto nulla dolores corrupti temporibus quidem natus dolore tenetur deleniti commodi voluptas quaerat qui. Quae maiores itaque consectetur.</p>
-        </section>
+        </div>
+      </div>
+    </section>  
 
     <section id="testimonials">
       <h2>What Our Clients Say</h2>
