--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="zenNavbar">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#index.html">Home |</a></li>
+        <li class="nav-item"><a class="nav-link" href="#top">Home |</a></li>
         <li class="nav-item"><a class="nav-link" href="#spa-menu">Spa Menu |</a></li>
         <li class="nav-item"><a class="nav-link" href="#wellness">Wellness Nook |</a></li>
         <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials |</a></li>
