--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <header class="site-header">
+  <header id="top" class="site-header">
     <h1>The Zen Den</h1>
     <nav class="navbar navbar-expand-lg fixed-top navbar-transparent">
   <div class="container">
@@ -88,7 +88,7 @@
 
 
      <section id="wellness" class="container my-5">
-          <h2 class="text-center md-4">The Wellness Nook</h2>
+          <h2 class="text-center mb-4">The Wellness Nook</h2>
           <div class="row">
       <div class="col-md-6">
           <h3>The Secret to Radiant Skin</h3>
