fix image file path

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </ul>
     </div>
     <div class="col-md-4">
-      <img src="./images/aromatherapy.jpg" class="img-fluid rounded mb-3" alt="Aromatherapy">
+      <img src="./images/Aromatherapy.jpg" class="img-fluid rounded mb-3" alt="Aromatherapy">
       <h3>Aromatherapy</h3>
       <ul class="list-unstyled">
         <li><strong>Lavender Relaxation</strong> - $55</li>
@@ -72,7 +72,7 @@
       </ul>
     </div>
     <div class="col-md-4">
-      <img src="./images/massage.jpg" class="img-fluid rounded mb-3" alt="Massage Therapies">
+      <img src="./images/Massage.jpg" class="img-fluid rounded mb-3" alt="Massage Therapies">
       <h3>Massage Therapies</h3>
       <ul class="list-unstyled">
         <li><strong>Swedish Massage</strong> - $60</li>
